fix: change footer margin to padding for better spacing on small screens

--- a/styles/main.css
+++ b/styles/main.css
@@ -120,7 +120,7 @@ footer {
     width: 100%;
     gap: .5rem;
     @media (max-width: 500px) {
-        margin-bottom: 4rem;
+        padding-bottom: 4rem;
     }
 }
 
